added about me.

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
     </div>
   </div>
   <h1>About</h1>
-  <h6 class='text-justify'>
+  <h6 class='text-center'>
 
     Before Hackbright, Margarita was a Special Education teacher in her home country of the Philippines.  Working with autistic and physically disabled children, she showed creativity and  dedication through her development of individualized programs for each student. After moving to the tech-centric Bay Area, she developed a curiosity for programming, which ultimately led to her fellowship with Hackbright Academy. 
     <br>
